--- a/default-fstab.yaml
+++ b/default-fstab.yaml
@@ -1,6 +1,6 @@
 mountpoints:
   /:
-    url: https://content.da.live/{org}/{site}/
+    url: https://drive.google.com/drive/folders/1RBcePjRO4QYMSIV2B7e5ElZAHGbo8uN9
     type: markup
 
 folders:
